; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_fs.c_ipoib_path_seq_next.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_fs.c_ipoib_path_seq_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.ipoib_path_iter = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i8*, i32*)* @ipoib_path_seq_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ipoib_path_seq_next(%struct.seq_file* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.seq_file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.ipoib_path_iter*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.ipoib_path_iter*
  store %struct.ipoib_path_iter* %10, %struct.ipoib_path_iter** %8, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  %14 = load %struct.ipoib_path_iter*, %struct.ipoib_path_iter** %8, align 8
  %15 = bitcast %struct.ipoib_path_iter* %14 to i8*
  %16 = call i64 @ipoib_path_iter_next(i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = load %struct.ipoib_path_iter*, %struct.ipoib_path_iter** %8, align 8
  %20 = bitcast %struct.ipoib_path_iter* %19 to i8*
  %21 = call i32 @kfree(i8* %20)
  store i8* null, i8** %4, align 8
  br label %25

22:                                               ; preds = %3
  %23 = load %struct.ipoib_path_iter*, %struct.ipoib_path_iter** %8, align 8
  %24 = bitcast %struct.ipoib_path_iter* %23 to i8*
  store i8* %24, i8** %4, align 8
  br label %25

25:                                               ; preds = %22, %18
  %26 = load i8*, i8** %4, align 8
  ret i8* %26
}

declare dso_local i64 @ipoib_path_iter_next(i8*) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
